data balancing for intermitent training

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -100,6 +100,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Simple Detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Train Detection from scratch"
@@ -110,6 +119,7 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -117,14 +127,15 @@
     "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
     "                            --lr 3e-5 \\\n",
     "                            --lr_delta 1e-5 \\\n",
+    "                            --weight_decay 4e-4 \\\n",
     "                            --max_epoch 100 \\\n",
-    "                            --batch_size 4 \\\n",
-    "                            --tag 0_1.det_scratch_temp \\\n",
+    "                            --batch_size 24 \\\n",
+    "                            --tag 0_1.det_scratch_test \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
-    "                            --data_dir $(pwd)/../dataset \\\n",
-    "                            --load_from_json \\\n",
-    "                            --log_dir $(pwd)/experiments"
+    "                            --data_dir $(pwd)/../dataset/segmented_detection/train \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json"
    ]
   },
   {
@@ -135,9 +146,9 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 0_1_largeImageEval.det_scratch \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_1.det_scratch.pth \\\n",
-    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --tag 0_1_largeImageEval.det_scratch_test \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_1.det_scratch_test.pth \\\n",
+    "                            --data_dir $(pwd)/../data/labeled_data \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -218,15 +229,16 @@
     "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
     "                            --lr 3e-5 \\\n",
     "                            --lr_delta 1e-5 \\\n",
+    "                            --weight_decay 4e-4 \\\n",
     "                            --max_epoch 100 \\\n",
-    "                            --batch_size 4 \\\n",
+    "                            --batch_size 24 \\\n",
     "                            --tag 0_2.det_transferlr_test \\\n",
     "                            --pretrained_backend \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
-    "                            --data_dir $(pwd)/../dataset \\\n",
-    "                            --load_from_json \\\n",
-    "                            --log_dir $(pwd)/experiments"
+    "                            --data_dir $(pwd)/../dataset/segmented_detection/train \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json"
    ]
   },
   {
@@ -237,9 +249,9 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 0_2_largeImageEval.det_transferlr \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_2.det_transferlr.pth \\\n",
-    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --tag 0_2_largeImageEval.det_transferlr_test \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_2.det_transferlr_test.pth \\\n",
+    "                            --data_dir $(pwd)/../data/labeled_data \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -302,6 +314,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Weakly supervised pre-training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train Image Level Classifier from scratch"
    ]
   },
@@ -324,7 +343,7 @@
     "                        --max_epoch 130 \\\n",
     "                        --batch_size 12 \\\n",
     "                        --accumulation_steps 3 \\\n",
-    "                        --tag 1_1.img_cls_scratch_test \\\n",
+    "                        --tag 1_1.img_cls_scratch \\\n",
     "                        --train_percent .90 \\\n",
     "                        --use_p_of_data 1 \\\n",
     "                        --data_dir $(pwd)/../data/train \\\n",
@@ -407,15 +426,16 @@
     "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
     "                            --lr 3e-5 \\\n",
     "                            --lr_delta 1e-5 \\\n",
+    "                            --weight_decay 4e-4 \\\n",
     "                            --max_epoch 100 \\\n",
-    "                            --batch_size 4 \\\n",
+    "                            --batch_size 24 \\\n",
     "                            --tag 1_2.ft_det_scratch_test \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1_img_cls_scratch.pth \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1.img_cls_scratch_test.pth \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
-    "                            --data_dir $(pwd)/../dataset \\\n",
-    "                            --load_from_json \\\n",
-    "                            --log_dir $(pwd)/experiments"
+    "                            --data_dir $(pwd)/../dataset/segmented_detection/train \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json"
    ]
   },
   {
@@ -426,9 +446,9 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 1_2_largeImageEval.ft_det_scratch \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_2.ft_det_scratch.pth \\\n",
-    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --tag 1_2_largeImageEval.ft_det_scratch_test \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_2.ft_det_scratch_test.pth \\\n",
+    "                            --data_dir $(pwd)/../data/labeled_data \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -499,6 +519,7 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -597,15 +618,16 @@
     "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
     "                            --lr 3e-5 \\\n",
     "                            --lr_delta 1e-5 \\\n",
+    "                            --weight_decay 4e-4 \\\n",
     "                            --max_epoch 100 \\\n",
-    "                            --batch_size 4 \\\n",
+    "                            --batch_size 24 \\\n",
     "                            --tag 2_2.ft_det_transferlr_test \\\n",
     "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
-    "                            --data_dir $(pwd)/../dataset/segmented_detection \\\n",
-    "                            --load_from_json \\\n",
-    "                            --log_dir $(pwd)/experiments"
+    "                            --data_dir $(pwd)/../dataset/segmented_detection/train \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json"
    ]
   },
   {
@@ -616,9 +638,9 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 2_2_largeImageEval.ft_det_transferlr \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_2.ft_det_transferlr.pth \\\n",
-    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --tag 2_2_largeImageEval.ft_det_transferlr_test \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_2.ft_det_transferlr_test.pth \\\n",
+    "                            --data_dir $(pwd)/../data/labeled_data \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -680,6 +702,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Weakly supervised and Unsupervised pre-training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train Image Level Classifier and Autoencoder from scratch"
    ]
   },
@@ -688,6 +717,7 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -701,7 +731,7 @@
     "                            --max_epoch 130 \\\n",
     "                            --batch_size 12 \\\n",
     "                            --accumulation_steps 3 \\\n",
-    "                            --tag 4_1.img_cls_regen_scratch \\\n",
+    "                            --tag 4_1.img_cls_regen_scratch_test \\\n",
     "                            --train_percent .90 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../data/train \\\n",
@@ -784,15 +814,16 @@
     "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
     "                            --lr 3e-5 \\\n",
     "                            --lr_delta 1e-5 \\\n",
+    "                            --weight_decay 0.0004 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 4_2.ft_det_scratch \\\n",
+    "                            --tag 4_2.ft_det_img_cls_regen_scratch_test \\\n",
     "                            --pretrained $(pwd)/experiments/checkpoints/chpt_4_1.img_cls_regen_scratch.pth \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
-    "                            --data_dir $(pwd)/../dataset/segmented_detection \\\n",
-    "                            --load_from_json \\\n",
-    "                            --log_dir $(pwd)/experiments"
+    "                            --data_dir $(pwd)/../dataset/segmented_detection/train \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json"
    ]
   },
   {
@@ -804,8 +835,8 @@
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
     "                            --tag 4_2_largeImageEval.ft_det_autoencoder_scratch \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_4_2.ft_det_scratch.pth \\\n",
-    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_4_2.ft_det_img_cls_regen_scratch_test.pth \\\n",
+    "                            --data_dir $(pwd)/../data/labeled_data \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -875,6 +906,7 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -972,15 +1004,16 @@
     "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
     "                            --lr 3e-5 \\\n",
     "                            --lr_delta 1e-5 \\\n",
+    "                            --weight_decay 0.0004 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 5_2.ft_det_transferlr \\\n",
+    "                            --tag 5_2.ft_det_img_cls_regen_transferlr_test \\\n",
     "                            --pretrained $(pwd)/experiments/checkpoints/chpt_5_1.img_cls_regen_transferlr.pth \\\n",
-    "                            --train_percent .7 \\\n",
+    "                            --train_percent .8 \\\n",
     "                            --use_p_of_data 1 \\\n",
-    "                            --data_dir $(pwd)/../dataset/segmented_detection \\\n",
-    "                            --load_from_json \\\n",
-    "                            --log_dir $(pwd)/experiments"
+    "                            --data_dir $(pwd)/../dataset/segmented_detection/test \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json"
    ]
   },
   {
@@ -1055,6 +1088,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Other alternative methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train intermitent Image Level Classifier and detection from scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/intermitent_train.py \\\n",
+    "                            --cls_opt adam \\\n",
+    "                            --cls_lr 1e-6 \\\n",
+    "                            --cls_lr_delta 1e-5 \\\n",
+    "                            --cls_lr_warmup 2e-2 \\\n",
+    "                            --cls_weight_decay 4e-4 \\\n",
+    "                            --cls_batch_size 56 \\\n",
+    "                            --cls_accumulation_steps 1 \\\n",
+    "                            --cls_train_percent .90 \\\n",
+    "                            --cls_use_p_of_data 1 \\\n",
+    "                            --cls_data_dir $(pwd)/../data/train \\\n",
+    "                            --det_opt adam \\\n",
+    "                            --det_lr 3e-5 \\\n",
+    "                            --det_lr_delta 1e-5 \\\n",
+    "                            --det_lr_warmup 2e-2 \\\n",
+    "                            --det_weight_decay 4e-4 \\\n",
+    "                            --det_batch_size 24 \\\n",
+    "                            --det_accumulation_steps 1 \\\n",
+    "                            --det_train_percent .7 \\\n",
+    "                            --det_use_p_of_data 1 \\\n",
+    "                            --det_data_dir $(pwd)/../dataset/segmented_detection/test \\\n",
+    "                            --load_from_json \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --tag 3_0.intermitent_cls_det_scratch_test3 \\\n",
+    "                            --log_dir $(pwd)/experiments\n",
+    "\n",
+    "#                             --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 3_0_largeImageEval.cls_det_scratch_new \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_3_0.cls_det_scratch.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train intermitent Image Level Classifier and detection with transfer learning"
    ]
   },
@@ -1067,31 +1167,31 @@
    },
    "outputs": [],
    "source": [
-    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_image_cls_train.py \\\n",
+    "!PYTHONPATH=$(pwd) python ./scripts/intermitent_train.py \\\n",
     "                            --cls_opt adam \\\n",
-    "                            --cls_lr 1e-4 \\\n",
+    "                            --cls_lr 1e-6 \\\n",
     "                            --cls_lr_delta 1e-5 \\\n",
-    "                            --cls_lr_warmup 4e-2 \\\n",
-    "                            --cls_weight_decay 4e-5 \\\n",
-    "                            --cls_batch_size 8 \\\n",
-    "                            --cls_accumulation_steps 3 \\\n",
+    "                            --cls_lr_warmup 2e-2 \\\n",
+    "                            --cls_weight_decay 4e-4 \\\n",
+    "                            --cls_batch_size 56 \\\n",
+    "                            --cls_accumulation_steps 1 \\\n",
     "                            --cls_train_percent .90 \\\n",
     "                            --cls_use_p_of_data 1 \\\n",
     "                            --cls_data_dir $(pwd)/../data/train \\\n",
     "                            --det_opt adam \\\n",
     "                            --det_lr 3e-5 \\\n",
     "                            --det_lr_delta 1e-5 \\\n",
-    "                            --det_lr_warmup 4e-2 \\\n",
-    "                            --det_weight_decay 4e-5 \\\n",
-    "                            --det_batch_size 2 \\\n",
-    "                            --det_accumulation_steps 2 \\\n",
+    "                            --det_lr_warmup 2e-2 \\\n",
+    "                            --det_weight_decay 4e-4 \\\n",
+    "                            --det_batch_size 24 \\\n",
+    "                            --det_accumulation_steps 1 \\\n",
     "                            --det_train_percent .7 \\\n",
     "                            --det_use_p_of_data 1 \\\n",
-    "                            --det_data_dir $(pwd)/../dataset \\\n",
+    "                            --det_data_dir $(pwd)/../dataset/segmented_detection/test \\\n",
     "                            --load_from_json \\\n",
-    "                            --max_epoch 50 \\\n",
+    "                            --max_epoch 100 \\\n",
     "                            --pretrained_backend \\\n",
-    "                            --tag 3_0.cls_det_scratch \\\n",
+    "                            --tag 3_0.intermitent_cls_det_scratch_test2 \\\n",
     "                            --log_dir $(pwd)/experiments\n",
     "\n",
     "#                             --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\"
