--- a/net_errors.ipynb
+++ b/net_errors.ipynb
@@ -62,7 +62,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# %matplotlib inline"
+    "%matplotlib inline"
    ]
   },
   {
@@ -127,18 +127,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../dataset/abc\"\n",
-    "large_dataset = BirdDetection(\n",
-    "        images_dir=os.path.join(data_dir, \"JPEGImages\"),\n",
-    "        annotations_dir=os.path.join(data_dir, \"Annotations\"),\n",
+    "data_dir = \"../data/labeled_data/\"\n",
+    "train_large_dataset = BirdDetection(\n",
+    "        images_dir=os.path.join(data_dir, \"train\"),\n",
+    "        annotations_dir=os.path.join(data_dir, \"train\"),\n",
     "    )\n",
-    "large_dataset = TransformDatasetWrapper(large_dataset, train_transform)"
+    "train_large_dataset = TransformDatasetWrapper(train_large_dataset, train_transform)\n",
+    "\n",
+    "test_large_dataset = BirdDetection(\n",
+    "        images_dir=os.path.join(data_dir, \"test\"),\n",
+    "        annotations_dir=os.path.join(data_dir, \"test\"),\n",
+    "    )\n",
+    "test_large_dataset = TransformDatasetWrapper(test_large_dataset, train_transform)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "model = retinanet_resnet50_fpn(num_classes=2, pretrained=False, pretrained_backbone=False, extra_heads=[\"cls\"])\n",
@@ -201,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_1.det_scratch.pth\"))"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_1.det_scratch_test.pth\")"
    ]
   },
   {
@@ -220,14 +228,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "ds = large_dataset\n",
+    "ds = test_large_dataset\n",
     "for idx, d in enumerate(ds):\n",
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
-    "    fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device, path=f\"reports/det_scratch/{idx}.jpg\")"
+    "    fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.0, thickness=1, device=device, path=f\"reports/det_scratch_test/{idx}.jpg\")"
    ]
   },
   {
@@ -245,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_2.det_transferlr_new_data.pth\"))"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_2.det_transferlr_test.pth\")"
    ]
   },
   {
@@ -255,26 +266,28 @@
    "outputs": [],
    "source": [
     "ds = large_dataset\n",
+    "# ds = train_dataset_det\n",
     "idx = random.randint(0, len(ds)-1)\n",
     "img = ds[idx][0]\n",
     "gt_boxes = ds[idx][1][\"boxes\"]\n",
     "\n",
-    "fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device)"
+    "fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.0, device=device, vis_boxes=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "ds = large_dataset\n",
-    "base_dir = \"reports/det_transferlr_new_data\"\n",
+    "ds = test_large_dataset\n",
     "for idx, d in enumerate(ds):\n",
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
-    "    create_directory(base_dir)\n",
-    "    fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device, path=f\"{base_dir}/{idx}.jpg\")"
+    "    fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.0, thickness=1, device=device, path=f\"reports/det_transferlr_test/{idx}.jpg\")"
    ]
   },
   {
@@ -292,7 +305,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_1_img_cls_scratch.pth\"))"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_1.img_cls_scratch_test.pth\")"
    ]
   },
   {
@@ -368,7 +381,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_2_ft_det_scratch.pth\"))"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_2.ft_det_scratch_test.pth\")"
    ]
   },
   {
@@ -396,14 +409,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "ds = large_dataset\n",
+    "ds = test_large_dataset\n",
     "for idx, d in enumerate(ds):\n",
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
-    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device, path=f\"reports/ft_det_scratch/{idx}.jpg\")"
+    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.2, thickness=1, device=device, path=f\"reports/ft_det_scratch_test/{idx}.jpg\")"
    ]
   },
   {
@@ -421,7 +437,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_avg_2_1_img_cls_transferlr.pth\"))"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth\")"
    ]
   },
   {
@@ -489,7 +505,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_2_2_ft_det_transferlr.pth\"))"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_2_2.ft_det_transferlr_test.pth\")"
    ]
   },
   {
@@ -498,12 +514,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = large_dataset\n",
+    "ds.dataset.files_name[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = val_dataset_det\n",
     "idx = random.randint(0, len(ds)-1)\n",
     "img = ds[idx][0]\n",
     "gt_boxes = ds[idx][1][\"boxes\"]\n",
     "\n",
-    "fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.0, device=device)"
+    "fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.0, device=device)"
    ]
   },
   {
@@ -521,11 +546,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = large_dataset\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds = test_large_dataset\n",
     "for idx, d in enumerate(ds):\n",
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
-    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/ft_det_transferlr/{idx}.jpg\")"
+    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.0, thickness=1, device=device, path=f\"reports/ft_det_transferlr_test/{idx}.jpg\")"
    ]
   },
   {
@@ -543,7 +580,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/chpt_3_0.cls_det_scratch.pth\"))"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_3_0.cls_det_scratch.pth\")"
    ]
   },
   {
@@ -760,7 +797,7 @@
     "for idx, d in enumerate(ds):\n",
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
-    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_regen_det_transferlr/{idx}.jpg\")"
+    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device, path=f\"reports/cls_regen_det_transferlr/{idx}.jpg\")"
    ]
   }
  ],
