added precision recall curve visualizations
- there are some subtle problems in implementation

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -128,9 +128,9 @@
     "                            --lr 3e-5 \\\n",
     "                            --lr_delta 1e-5 \\\n",
     "                            --weight_decay 4e-4 \\\n",
-    "                            --max_epoch 100 \\\n",
+    "                            --max_epoch 800 \\\n",
     "                            --batch_size 24 \\\n",
-    "                            --tag 0_1.det_scratch_test \\\n",
+    "                            --tag 0_1.det_scratch_test2 \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset/segmented_detection/train \\\n",
@@ -1191,7 +1191,7 @@
     "                            --load_from_json \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --pretrained_backend \\\n",
-    "                            --tag 3_0.intermitent_cls_det_scratch_test2 \\\n",
+    "                            --tag 3_0.intermitent_cls_det_transferlr_test \\\n",
     "                            --log_dir $(pwd)/experiments\n",
     "\n",
     "#                             --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\"
