--- a/net_errors.ipynb
+++ b/net_errors.ipynb
@@ -60,7 +60,11 @@
     "import cv2\n",
     "import random\n",
     "import numpy as np\n",
+    "\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from pylab import cm\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -161,6 +165,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def precision_recall_curve(model, dataset, at_iou = 0.2, at_nms = 0.5):\n",
+    "    model.eval()\n",
+    "    score_list = []\n",
+    "    pseudo_y_true_list = []\n",
+    "    actual_positives = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for step, (images, targets) in enumerate(dataset):\n",
+    "            ###############################################################################\n",
+    "            # Normal\n",
+    "            ###############################################################################\n",
+    "            images = [images]\n",
+    "            targets = [targets]\n",
+    "            detections = model(images)\n",
+    "\n",
+    "            boxes, scores, labels = (\n",
+    "                [det[\"boxes\"] for det in detections][0],\n",
+    "                [det[\"scores\"] for det in detections][0],\n",
+    "                [det[\"labels\"] for det in detections][0],\n",
+    "            )\n",
+    "\n",
+    "            gt_boxes, gt_labels = (\n",
+    "                [lbl[\"boxes\"] for lbl in targets][0],\n",
+    "                [lbl[\"labels\"] for lbl in targets][0],\n",
+    "            )\n",
+    "\n",
+    "            # remove overlapping boxes\n",
+    "            keep = torchvision.ops.batched_nms(\n",
+    "                boxes, scores, labels, at_nms\n",
+    "            )\n",
+    "            boxes, scores = boxes[keep], scores[keep]\n",
+    "\n",
+    "            # matching predictions\n",
+    "            match_matrix = torchvision.ops.box_iou(boxes, gt_boxes)\n",
+    "    #         print(match_matrix.shape)\n",
+    "            match_scores, _ = match_matrix.max(dim=1)\n",
+    "\n",
+    "            # apply IOU threshold to get pseudo y_true labels\n",
+    "            pseudo_y_ture = torch.where(match_scores > at_iou, 1, 0).to(\n",
+    "                match_scores.device\n",
+    "            )\n",
+    "\n",
+    "            pseudo_y_true_list.append(pseudo_y_ture)\n",
+    "            score_list.append(scores)\n",
+    "            actual_positives.append(match_matrix.shape[1])\n",
+    "\n",
+    "        pseudo_y_ture = torch.cat(pseudo_y_true_list)\n",
+    "        scores = torch.cat(score_list)\n",
+    "\n",
+    "        # sorting pseudo labels based on predicted scores\n",
+    "        # makes it possoble for calculating precision and recall values\n",
+    "        # for different thresholds\n",
+    "        _, match_indices = torch.sort(scores, dim=0, descending=True)\n",
+    "        pseudo_y_ture = pseudo_y_ture[match_indices]\n",
+    "\n",
+    "        tps = pseudo_y_ture.float().cumsum(0)\n",
+    "        fps = (torch.ones(1).to(pseudo_y_ture.device) - pseudo_y_ture).float().cumsum(0)\n",
+    "\n",
+    "        # precision recall curve\n",
+    "        precision = tps / (tps + fps)\n",
+    "        precision[torch.isnan(precision)] = 0\n",
+    "        recall = torch.minimum(tps / torch.tensor(actual_positives).sum().to(tps.device), torch.ones(tps.size()).to(tps.device)) # tps[-1]\n",
+    "        recall[torch.isnan(recall)] = 0\n",
+    "\n",
+    "\n",
+    "        # average precision\n",
+    "        ap = (torch.diff(recall) * precision[:-1]).sum()\n",
+    "    \n",
+    "    return precision.cpu().numpy(), recall.cpu().numpy(), ap.cpu().numpy()\n",
+    "\n",
+    "def plot_pr_rc_curve(model, dataset, title):\n",
+    "    # Create figure and add axes object\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_axes([0, 0, 1, 1])\n",
+    "    ax.set_title(title)\n",
+    "    ax.set_xlabel('Precision', labelpad=10, fontsize=16)\n",
+    "    ax.set_ylabel('Recall', labelpad=10, fontsize=16)\n",
+    "    for at_iou in [0.2, 0.5, 0.75, 0.9, 0.95]:\n",
+    "        precision, recall, ap = precision_recall_curve(model, dataset, at_iou, at_nms=0.5)\n",
+    "        ax.plot(recall, precision, label=f\"AP@IOU{at_iou:.2f}:{ap:.3f}\")\n",
+    "    # Add legend to plot\n",
+    "    ax.legend(bbox_to_anchor=(1, 1), loc=1, frameon=False)\n",
+    "    plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_res(model, inp):\n",
     "    model.eval()\n",
     "    image, label = inp\n",
@@ -242,6 +337,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"0_1.det_scratch_test\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -288,6 +395,18 @@
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
     "    fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.0, thickness=1, device=device, path=f\"reports/det_transferlr_test/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"0_2.det_transferlr_test\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
    ]
   },
   {
@@ -423,6 +542,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"1_2.ft_det_scratch_test\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -543,15 +674,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -563,6 +685,18 @@
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
     "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.0, thickness=1, device=device, path=f\"reports/ft_det_transferlr_test/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"2_2.ft_det_transferlr_test\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
    ]
   },
   {
@@ -580,7 +714,7 @@
    },
    "outputs": [],
    "source": [
-    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_3_0.cls_det_scratch.pth\")"
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_3_0.intermitent_cls_det_transferlr_test.pth\")"
    ]
   },
   {
@@ -617,6 +751,18 @@
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
     "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_det_scratch/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"3_0.intermitent_cls_det_transferlr_test\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
    ]
   },
   {
