--- a/net_errors.ipynb
+++ b/net_errors.ipynb
@@ -196,20 +196,34 @@
     "                boxes, scores, labels, at_nms\n",
     "            )\n",
     "            boxes, scores = boxes[keep], scores[keep]\n",
+    "            \n",
+    "            if not boxes.size()[0] > 0:\n",
+    "                pseudo_y_ture = torch.zeros(1).to(boxes.device)\n",
+    "                scores = torch.zeros(1).to(boxes.device)\n",
+    "            else:\n",
+    "                # matching predictions\n",
+    "                match_matrix = torchvision.ops.box_iou(boxes, gt_boxes)\n",
+    "                _, match_indices = torch.sort(scores, dim=0, descending=True)\n",
+    "                match_matrix = match_matrix[match_indices, :]\n",
+    "                match_scores, matched_idx = match_matrix.max(dim=1)\n",
     "\n",
-    "            # matching predictions\n",
-    "            match_matrix = torchvision.ops.box_iou(boxes, gt_boxes)\n",
-    "    #         print(match_matrix.shape)\n",
-    "            match_scores, _ = match_matrix.max(dim=1)\n",
-    "\n",
-    "            # apply IOU threshold to get pseudo y_true labels\n",
-    "            pseudo_y_ture = torch.where(match_scores > at_iou, 1, 0).to(\n",
-    "                match_scores.device\n",
-    "            )\n",
+    "                # apply IOU threshold to get pseudo y_true labels\n",
+    "                pos_idx = torch.where(match_scores > at_iou)[0]\n",
+    "                pseudo_y_ture = torch.where(match_scores > at_iou, 1, 0).to(\n",
+    "                    match_scores.device\n",
+    "                )\n",
+    "                \n",
+    "                # count duplicated predistions with lower predicted score as false positives\n",
+    "                detected_set = set()\n",
+    "                for idx in pos_idx:\n",
+    "                    if matched_idx[idx].item() in detected_set:\n",
+    "                        pseudo_y_ture[idx] = 0\n",
+    "                    else:\n",
+    "                        detected_set.add(matched_idx[idx].item())\n",
     "\n",
     "            pseudo_y_true_list.append(pseudo_y_ture)\n",
     "            score_list.append(scores)\n",
-    "            actual_positives.append(match_matrix.shape[1])\n",
+    "            actual_positives.append(gt_boxes.shape[0])\n",
     "\n",
     "        pseudo_y_ture = torch.cat(pseudo_y_true_list)\n",
     "        scores = torch.cat(score_list)\n",
@@ -226,7 +240,7 @@
     "        # precision recall curve\n",
     "        precision = tps / (tps + fps)\n",
     "        precision[torch.isnan(precision)] = 0\n",
-    "        recall = torch.minimum(tps / torch.tensor(actual_positives).sum().to(tps.device), torch.ones(tps.size()).to(tps.device)) # tps[-1]\n",
+    "        recall = tps / torch.tensor(actual_positives).sum().to(tps.device) # tps[-1]\n",
     "        recall[torch.isnan(recall)] = 0\n",
     "\n",
     "\n",
@@ -714,6 +728,72 @@
    },
    "outputs": [],
    "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_3_0.intermitent_cls_det_scratch_test3.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "idx = random.randint(0, len(ds)-1)\n",
+    "img = ds[idx][0]\n",
+    "gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "\n",
+    "fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.0, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "for idx, d in enumerate(ds):\n",
+    "    img = ds[idx][0]\n",
+    "    gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_det_scratch/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"3_0.intermitent_cls_det_scratch_test3\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### transferlr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
     "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_3_0.intermitent_cls_det_transferlr_test.pth\")"
    ]
   },
@@ -805,6 +885,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"3_0.intermitent_cls_det_transferlr_test\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -847,6 +939,18 @@
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
     "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_regen_det_scratch/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"4_1.img_cls_regen_scratch\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
    ]
   },
   {
@@ -944,6 +1048,18 @@
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
     "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device, path=f\"reports/cls_regen_det_transferlr/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = \"4_1.img_cls_regen_scratch\"\n",
+    "plot_pr_rc_curve(model, train_dataset_det, f\"EXP: {exp}  |  DS: train_dataset_det\")\n",
+    "plot_pr_rc_curve(model, val_dataset_det, f\"EXP: {exp}  |  DS: val_dataset_det\")\n",
+    "plot_pr_rc_curve(model, test_large_dataset, f\"EXP: {exp}  |  DS: test_large_dataset\")"
    ]
   }
  ],
